--- a/aws/aws-cli/Dockerfile
+++ b/aws/aws-cli/Dockerfile
@@ -3,5 +3,5 @@ FROM alpine:latest
 MAINTAINER AND Digital <hello@and.digital>
 
 RUN apk add --update --quiet python py-pip groff && \
-    pip --upgrade install awscli && \
+    pip install awscli==1.11.131 && \
     rm -rf /var/cache/*
